# HWMonitor

./: .gitignore  Cargo.toml  build.rs  hwmonitor.exe.manifest  readme.md
assets/: asset-manifest.json  index.html
assets/static/css/: main.abf2c4c9.css  main.abf2c4c9.css.map
assets/static/js/: main.2856d40c.js  main.2856d40c.js.map
src/: main.rs
website-src/: package-lock.json  package.json
website-src/src/: App.js  index.js
website-src/src/pretty/: App.module.css  index.css
