[package]
name = "hwmonitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22", features = ["full"] }
futures-util = "0.3.25"
futures-channel = "0.3.25"
lazy_static = "1.4.0"
tungstenite = "0.18.0"
tokio-tungstenite = "*"
axum = {version = "0.6.1", features= ["headers"]}
axum-extra = {version = "0.4.2", features = ["spa"]}
tower-http = { version = "0.3.5", features = ["cors"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
network-interface = "0.1.5"
sysinfo = "0.27.0"
nvml-wrapper = "0.8.0"
inquire = "0.5.2"

[build-dependencies]
embed-manifest = "1"
